        groups. Thanks to Steve Lianoglou for highlighting. The order of
        the rows within each group, always has, and always will be 
        preserved.
        
    o   The key argument of data.table() now accepts a vector of
        column names in addition to a single comma separated string
        of column names. Thanks to Steve Lianoglou for highlighting.


BUG FIXES

    o   merge()ing two data.table's with user-defined `suffixes`
        was getting tripped up when column names in x ended in
        '.1'. This resulted in the `suffixes` parameter being
        ignored.
        
    o   Mistakenly wrapping a j expression inside quotes; e.g.,
            DT[,list("sum(a),sum(b)"),by=grp]
        was appearing to work, but with wrong column names. This
        now returns a character column (the quotes should not
        be used). Thanks to Joseph Voelkel for reporting. 
        
    
USER-VISIBLE CHANGES

    o   The startup banner checks to see if a new version
        is available and if there is, suggests upgrading.
        Suppressable with suppressPackageStartupMessages.
        
        
DEPRECATED & DEFUNCT

   o    Use of the DT() alias in j is no longer caught and
        replaced, and is now fully removed. As warned in NEWS
        for v1.5.3, v1.4, and FAQs 2.6 and 2.7.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.2   **
        **                                         **
        *********************************************

NEW FEATURES

   o    setkey no longer copies the whole table and should be
        faster for large tables. Each column is reordered by reference
        (in C) using one column of working memory, FR#1006. User
        defined attributes on the original table are now also
        retained (thanks to Thell Fowler for reporting).
        
   o    A new symbol .N is now available to j, containing the